syntax = "proto3";
package lavalottery.lavalottery;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "lavalottery/x/lavalottery/types";

// Msg defines the Msg service.
service Msg {
      rpc SendTicket(MsgSendTicket) returns (MsgSendTicketResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgSendTicket {
  string creator = 1;
  string fee = 2;
  string bet = 3;
}

message MsgSendTicketResponse {
}

// this line is used by starport scaffolding # proto/tx/message
